Linting (#399)